Tue Apr 17 13:59:01 2001  George Lebl <jirka@5z.com>

	* tasklist_applet.c: fix a crash that could possibly happen when
	  the get_label is called on an empty group or a task with no
	  class.  Plus fixup some whacky mem management by "oh horrors" doing
	  one g_strdup/g_free extra.  Also when the name is NULL, use "???"
	  and always do the full deal on the label rather then returning
	  before we set the iconified [] things or whatnot.

Mon Mar 12 15:07:40 2001  George Lebl <jirka@5z.com>

	* tasklist_applet.gnorba: make it exe not shlib, so that it loads
	  now again.

Mon Mar 12 14:52:32 2001  George Lebl <jirka@5z.com>

	* tasklist_applet.c: when sorting tasks and the groups are the same
	  sort by the x window id to make sure tasks don't jump around.

2001-03-12  Anders Carlsson  <andersca@codefactory.se>

	* tasklist_applet.gnorba: change location_info to point to
	  the process instead of the shlib.

	* tasklist_applet.c: define APPLET_COMPILE_AS_PROCESS and make
	  it actually compile.
	  (tasklist_destroy): "Fix" a warning.

	* Makefile.am: Make the tasklist a process again, since the
	  shlib version currently leaks and is weird.

Mon Mar 12 01:27:24 2001  George Lebl <jirka@5z.com>

	* tasklist_applet.[ch], tasklist_properties.c, tasklist_icon.c:
	  Don't crash on remove from panel, don't redraw tasks when just
	  geometry changed, redraw only when needed, change size when it has
	  actually changed, not depending on random stack data, fix some
	  leaks when removing tasklist but it still leaks quite horribly.
	  Null things when freed to avoid crashes.  Notice icon changes
	  again.  Add sarcastic #warning.

2001-03-09  Jaka Mocnik  <jaka@gnu.org>

	* tasklist/tasklist_applet.c (tasklist_task_get_label): return
	empty string if task name is NULL. this prevents occasional
	segfaults.

2001-03-04 John Fleck <jfleck@inkstain.net>

	* help/C/tasklist.sgml, help/C/tasklist_applet.sgml, plus
	screenshots - add discussion of task grouping to docs, update